<resources>
    <string name="app_name">FlipWarranty</string>
    <string name="search">Search</string>
    <string name="enter_serial_number">Enter Serial Number</string>
    <string name="cryptic_warranty">CRYPTIC WARRANTY</string>
    <string name="scan_qr">SCAN QR</string>
    <string name="or">OR</string>
    <string name="warranty_details">WARRANTY DETAILS</string>
    <string name="add_new_product">Add New Product</string>
    <string name="your_listings">Your Listings</string>
    <string name="change_user_type">Change User Type</string>
    <string name="add_product_details">ADD PRODUCT DETAILS</string>
    <string name="product_name">Product Name</string>
    <string name="product_description">Product Description</string>
    <string name="email">Email</string>
    <string name="close_product_addition">Close Product Addition</string>
    <string name="add_product">ADD PRODUCT</string>
    <string name="add_photo">Add Photo</string>
    <string name="price">Price</string>
    <string name="Buy_now">Buy Now</string>
    <string name="purchaseHistory">Purchase History</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_out">LOG OUT</string>
    <string name="order_history">ORDER HISTORY</string>
    <string name="DevName">Priyanshu Gupta</string>
    <string name="edit">Edit</string>
    <string name="warranty_check">Warranty Check</string>
    <string name="profile">Profile</string>
    <string name="welcome">WELCOME</string>
    <string name="design">design</string>
    <string name="sign_in_your_account">Sign in Your Account</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sample_mail">Priyanshu@gmail.com</string>
    <string name="listed_items">Listed Items</string>
    <string name="un_signed_items">Un-Signed Items</string>
    <string name="signed_items">Signed Items</string>
    <string name="buy_now">Buy Now</string>
    <string name="delete">Delete</string>
    <string name="from">From :</string>
    <string name="till">Till :</string>
    <string name="remark">Remark :</string>
    <string name="hello_world">hello world</string>
</resources>