<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/warranty_bg"
        android:fitsSystemWindows="true"
        android:theme="@style/Theme.FlipWarranty">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/scanQrBtn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="50dp"

            android:background="@drawable/premium_btn"
            android:elevation="40dp"
            android:shadowColor="@color/white"
            android:shadowRadius="25"
            android:text="@string/scan_qr"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/guideline2"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="30dp"
            android:text="@string/or"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline2" />

        <EditText
            android:id="@+id/serialEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:hint="@string/enter_serial_number"
            android:minHeight="38dp"
            android:textColorHint="#C1BEBE"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/searchWithSerialNumber"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:importantForAutofill="no"
            android:inputType="text"
            app:layout_constraintVertical_chainStyle="packed" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/searchWithSerialNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@drawable/premium_btn"
            android:focusable="true"
            android:foregroundGravity="right"
            android:shadowColor="@color/white"
            android:shadowRadius="25"
            android:text="@string/search"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/serialEditText"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/serialEditText"
            app:layout_constraintTop_toTopOf="@+id/serialEditText" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>