<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        tools:context=".LoginActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tv_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aladin"
                android:padding="60dp"
                android:text="@string/welcome"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@color/lightGreen"
                android:contentDescription="@string/design"
                android:rotation="138"
                android:translationY="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@color/lightMattBlue"
                android:contentDescription="@string/design"
                android:rotation="138"
                android:translationY="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@color/lightBabyPink"
                android:contentDescription="@string/design"
                android:rotation="138"
                android:translationX="5dp"
                android:translationY="7dp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView5"
                app:layout_constraintEnd_toStartOf="@+id/imageView5"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/carter_one"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/sign_in_your_account"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/tv_logo" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginVertical="15dp"
            android:layout_marginLeft="55dp"
            android:layout_marginRight="55dp"
            android:background="@drawable/warranty_bg"
            android:hint="@string/email"
            android:inputType="text"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:singleLine="true"
            android:textColor="#8B91AB"
            android:textColorHint="#8B91AB"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/create_pass"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_desc"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/create_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="55dp"
            android:layout_marginRight="55dp"
            app:hintEnabled="false"
            app:layout_constraintBottom_toTopOf="@+id/btn_sign_in"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_username"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_pass"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/warranty_bg"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="20dp"
                android:singleLine="true"
                android:textColor="#8B91AB"
                android:textSize="14sp"
                tools:ignore="RtlSymmetry" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginVertical="25dp"
            android:layout_marginLeft="55dp"
            android:layout_marginRight="55dp"
            android:background="@drawable/premium_btn"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/carter_one"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_pass" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/lightBabyPink"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>